content main change

--- a/index.html
+++ b/index.html
@@ -40,19 +40,22 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Eusebio Bergò
+                        <span class="text-primary">Stefano</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Ivrea (TO) · Italy · 22 years
+                        <!-- <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <hr>
+                    THIS PAGE IS STILL WORK IN PROGRESS
+                    <hr>
+                    <!-- <p class="lead mb-5">TODO: insert personal description here</p> -->
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/stefano-eusebio-bergò/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/stebo1"><i class="fab fa-github"></i></a>
+                        <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
             </section>
@@ -63,35 +66,35 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Mobile and Web developer</h3>
+                            <div class="subheading mb-3">Scholastic internship at <a href="https://www.linkedin.com/company/robson-srl/?originalSubdomain=it">Robson</a></div>
+                            <p><i>work in progress</i></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2023 - Sep 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 id="perla" class="mb-0">P.E.R.L.A.</h3>
+                            <div class="subheading mb-3">Winning entry for the contest "Welcome to Automation 2018/19" from <a href="https://www.balluff.com/it-it">Balluf</a></div>
+                            <p>The project consists of a device to be mounted on common wheelchairs. It allows the artificial movement of some joints of the arms and legs to allow exercise and/or rehabilitation of patients suffering from motor difficulties. It can therefore be useful for post-trauma rehabilitation but also to keep the body active in elderly people who require the intervention of a physiotherapist.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2018 - July 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Android developer</h3>
+                            <div class="subheading mb-3">Scholastic internship at <a href="https://www.linkedin.com/company/laser-informatica/?originalSubdomain=it">Laser Informatica</a></div>
+                            <p>Development of an Android application with the IDE "Android Studio". Design, implementation ed usage of a relational database with MySQL. Observation of software development and company workflow.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2018 - Sep 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 id="virgilio" class="mb-0">Virgilio</h3>
+                            <div class="subheading mb-3">Entry for the contest "Welcome to Automation 2017/18" from <a href="https://www.balluff.com/it-it">Balluf</a></div>
+                            <p>The project consists of a guide robot that aims to help people orient themselves inside buildings such as hospitals, museums, fairs and other complex or crowded places. Its task is not only to provide information but also to physically accompany people to the requested location through the use of sensors and local data processing.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct 2017 - June 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -102,20 +105,23 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0"><a href="https://www.istitutoolivetti.it">IIS CAMILLO OLIVETTI <img src="assets\img\link.png" style="height: 15px;"/></a></h3>
+                            <div class="subheading mb-3">COMPUTER EXPERT</div>
+                            <div>Computer Science</div>
+                            <p>100/100 + lode</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015 - 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0"><a href="https://www.unito.it">UNIVERSITÀ DEGLI STUDI DI TORINO <img src="assets\img\link.png" style="height: 15px;"/></a></h3>
+                            <div class="subheading mb-3">COMPUTER SCIENTIST</div>
+                            <!-- · -->
+                            <a href="assets\documents\Tesi.pdf">my thesis - in italian</a>
+                            <div>Computer Science</div>
+                            <p>108/110</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2020 - Nov 2023</span></div>
                     </div>
                 </div>
             </section>
@@ -125,37 +131,43 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                    <ul class="list-inline">
+                        <!-- <li class="list-inline-item"><i class="fab fa-unity"></i></li> -->
+                        <li><img src="assets/img/unity.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Unity</li>
+                        <li class="list-inline-item"><img src="assets/img/java.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/c-sharp.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/c.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
+                        <li><img src="assets/img/git.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Git - GitHub - GitLab</li>
+                        <li><img src="assets/img/flutter.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Flutter</li>
+                        <li class="list-inline-item"><img src="assets/img/visual-studio.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/visual-studio-code.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
+                        <!-- <li><img src="assets/img/android.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Android</li> -->
+                        <li>JSON</li>
+                        <li>XML</li>
+                        <li>UML</li>
+                        <li>SQL</li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Certifications</div>
+                    <ul class="fa-ul">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <b style="color: #bd5d38">ENGLISH</b> - level B2
+                            <p>&emsp;FIRST certificate issued by Cambridge University Press & Assessment</p>
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3">Workflow & Others</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Design Patterns
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Software Architecture
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Agile Development
                         </li>
                     </ul>
                 </div>
@@ -165,53 +177,25 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>work in progess..</p>
+                    <p class="mb-0">work in progess..</p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Awards</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Place - "Welcome to Automation 2018/19" from <a href="https://www.balluff.com/it-it">Balluf</a> with the project "<a href="#perla">P.E.R.L.A.</a>"
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            top 5 in "Welcome to Automation 2017/18" from <a href="https://www.balluff.com/it-it">Balluf</a> with the project "<a href="#virgilio">Virgilio</a>"
                         </li>
                     </ul>
                 </div>
