--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Eusebio Bergò Stefano</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -38,8 +38,12 @@
         <div class="container-fluid p-0">
             <!-- About-->
             <section class="resume-section" id="about">
+				
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
+					<img class="img-fluid img-profile rounded-circle mx-auto mb-2 d-block d-lg-none"
+						style="width: 300px; margin: auto; padding-bottom: 20px"
+						src="assets/img/profile.jpeg" alt="..." />
+				    <h1 class="mb-0">
                         Eusebio Bergò
                         <span class="text-primary">Stefano</span>
                     </h1>
@@ -47,10 +51,10 @@
                         Ivrea (TO) · Italy · 22 years
                         <!-- <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
-                    <hr>
-                    THIS PAGE IS STILL WORK IN PROGRESS
-                    <hr>
-                    <!-- <p class="lead mb-5">TODO: insert personal description here</p> -->
+                    <p class="lead mb-5">
+						Recent graduate in Computer Science with internship experience in the mobile application development field. Currently looking for job opportunities where I can use the skills I have acquired and possibly develop new ones. I am particularly interested in learning more about topics such as Unity and game development.
+                    </p>
+					<!-- <p class="lead mb-5">TODO: insert personal description here</p> -->
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/stefano-eusebio-bergò/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/stebo1"><i class="fab fa-github"></i></a>
@@ -68,14 +72,16 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Mobile and Web developer</h3>
                             <div class="subheading mb-3">Scholastic internship at <a href="https://www.linkedin.com/company/robson-srl/?originalSubdomain=it">Robson</a></div>
-                            <p><i>work in progress</i></p>
+                            <p>
+								Design and development of an application for Android and web browser using the Flutter framework. The application aims to allow the user, after logging in, to interface with some of the company's back-end services. These manage the reading of the field sensors and the processing of the sampled values; the application therefore deals with data visualization through Cartesian graphs and various other components developed on request.
+							</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2023 - Sep 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 id="perla" class="mb-0">P.E.R.L.A.</h3>
-                            <div class="subheading mb-3">Winning entry for the contest "Welcome to Automation 2018/19" from <a href="https://www.balluff.com/it-it">Balluf</a></div>
+                            <div class="subheading mb-3">Winning entry for the contest "Welcome to Automation 2018/19" from <a href="https://www.balluff.com/it-it">Balluff</a></div>
                             <p>The project consists of a device to be mounted on common wheelchairs. It allows the artificial movement of some joints of the arms and legs to allow exercise and/or rehabilitation of patients suffering from motor difficulties. It can therefore be useful for post-trauma rehabilitation but also to keep the body active in elderly people who require the intervention of a physiotherapist.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2018 - July 2019</span></div>
@@ -91,7 +97,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 id="virgilio" class="mb-0">Virgilio</h3>
-                            <div class="subheading mb-3">Entry for the contest "Welcome to Automation 2017/18" from <a href="https://www.balluff.com/it-it">Balluf</a></div>
+                            <div class="subheading mb-3">Entry for the contest "Welcome to Automation 2017/18" from <a href="https://www.balluff.com/it-it">Balluff</a></div>
                             <p>The project consists of a guide robot that aims to help people orient themselves inside buildings such as hospitals, museums, fairs and other complex or crowded places. Its task is not only to provide information but also to physically accompany people to the requested location through the use of sensors and local data processing.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2017 - June 2018</span></div>
@@ -108,7 +114,7 @@
                             <h3 class="mb-0"><a href="https://www.istitutoolivetti.it">IIS CAMILLO OLIVETTI <img src="assets\img\link.png" style="height: 15px;"/></a></h3>
                             <div class="subheading mb-3">COMPUTER EXPERT</div>
                             <div>Computer Science</div>
-                            <p>100/100 + lode</p>
+                            <p>100 / 100 &nbsp &nbsp & &nbsp &nbsp praise</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2015 - 2020</span></div>
                     </div>
@@ -119,7 +125,7 @@
                             <!-- · -->
                             <a href="assets\documents\Tesi.pdf">my thesis - in italian</a>
                             <div>Computer Science</div>
-                            <p>108/110</p>
+                            <p>108 / 110</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2020 - Nov 2023</span></div>
                     </div>
@@ -133,14 +139,17 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline">
                         <!-- <li class="list-inline-item"><i class="fab fa-unity"></i></li> -->
-                        <li><img src="assets/img/unity.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Unity</li>
-                        <li class="list-inline-item"><img src="assets/img/java.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/c-sharp.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/c.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
-                        <li><img src="assets/img/git.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Git - GitHub - GitLab</li>
-                        <li><img src="assets/img/flutter.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Flutter</li>
-                        <li class="list-inline-item"><img src="assets/img/visual-studio.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/visual-studio-code.png" alt="..." style="height: 40px; margin-bottom: 5px"/></li>
+                        <li><img src="assets/img/unity.png" title="Unity" style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/java.png" title="Java" style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/c-sharp.png" title="C#" style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/c.png" title="C" style="height: 40px; margin-bottom: 5px"/></li>
+                        <li><img src="assets/img/git.png" title="Git - GitHub - GitLab" style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/visual-studio.png" title="Visual Studio" style="height: 40px; margin-bottom: 5px"/></li>
+                        <li class="list-inline-item"><img src="assets/img/visual-studio-code.png" title="Visual Studio Code" style="height: 40px; margin-bottom: 5px"/></li>
+						<li><img src="assets/img/flutter.png" title="Flutter" style="height: 40px; margin-bottom: 5px"/></li>
+						<li class="list-inline-item"><img src="assets/img/mysql.png" title="MySQL" style="height: 40px; margin-bottom: 5px"/></li>
+						<li class="list-inline-item"><img src="assets/img/postgre.png" title="PostgreSQL" style="height: 40px; margin-bottom: 5px"/></li>
+						<li class="list-inline-item"><img src="assets/img/mongo.png" title="MongoDB" style="height: 40px; margin-bottom: 5px"/></li>
                         <!-- <li><img src="assets/img/android.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Android</li> -->
                         <li>JSON</li>
                         <li>XML</li>
@@ -191,11 +200,11 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - "Welcome to Automation 2018/19" from <a href="https://www.balluff.com/it-it">Balluf</a> with the project "<a href="#perla">P.E.R.L.A.</a>"
+                            Place - "Welcome to Automation 2018/19" from <a href="https://www.balluff.com/it-it">Balluff</a> with the project "<a href="#perla">P.E.R.L.A.</a>"
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            top 5 in "Welcome to Automation 2017/18" from <a href="https://www.balluff.com/it-it">Balluf</a> with the project "<a href="#virgilio">Virgilio</a>"
+                            top 5 in "Welcome to Automation 2017/18" from <a href="https://www.balluff.com/it-it">Balluff</a> with the project "<a href="#virgilio">Virgilio</a>"
                         </li>
                     </ul>
                 </div>
