changed skill visual

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Eusebio Bergò Stefano Resume</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -137,25 +137,132 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline">
-                        <!-- <li class="list-inline-item"><i class="fab fa-unity"></i></li> -->
-                        <li><img src="assets/img/unity.png" title="Unity" style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/java.png" title="Java" style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/c-sharp.png" title="C#" style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/c.png" title="C" style="height: 40px; margin-bottom: 5px"/></li>
-                        <li><img src="assets/img/git.png" title="Git - GitHub - GitLab" style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/visual-studio.png" title="Visual Studio" style="height: 40px; margin-bottom: 5px"/></li>
-                        <li class="list-inline-item"><img src="assets/img/visual-studio-code.png" title="Visual Studio Code" style="height: 40px; margin-bottom: 5px"/></li>
-						<li><img src="assets/img/flutter.png" title="Flutter" style="height: 40px; margin-bottom: 5px"/></li>
-						<li class="list-inline-item"><img src="assets/img/mysql.png" title="MySQL" style="height: 40px; margin-bottom: 5px"/></li>
-						<li class="list-inline-item"><img src="assets/img/postgre.png" title="PostgreSQL" style="height: 40px; margin-bottom: 5px"/></li>
-						<li class="list-inline-item"><img src="assets/img/mongo.png" title="MongoDB" style="height: 40px; margin-bottom: 5px"/></li>
-                        <!-- <li><img src="assets/img/android.png" alt="..." style="height: 40px; margin-bottom: 5px"/> Android</li> -->
-                        <li>JSON</li>
-                        <li>XML</li>
-                        <li>UML</li>
-                        <li>SQL</li>
-                    </ul>
+					
+					<div class="container text-start" style="margin-bottom:20px">
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+							  <img src="assets/img/unity.png" title="Unity" style="height: 40px;"/>
+							</div>
+							<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:200px;">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped" style="width: 30%"></div>
+									</div>
+									WORK IN PROGRESS...
+								</div>
+							</div>
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+							  <img src="assets/img/java.png" title="Java" style="height: 40px;"/>
+							</div>
+							<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:200px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped bg-success" style="width: 75%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+							  <img src="assets/img/c-sharp.png" title="C#" style="height: 40px;"/>
+							</div>
+							<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:200px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped bg-success" style="width: 60%"></div>
+									</div>
+									WORK IN PROGRESS...
+								</div>
+							</div>
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+							  <img src="assets/img/c.png" title="C" style="height: 40px;"/>
+							</div>
+							<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:200px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped" style="width: 30%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+							  <img src="assets/img/git.png" title="Git - GitHub - GitLab" style="height: 40px;"/>
+							</div>
+							<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:200px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped bg-warning" style="width: 45%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+							  <img src="assets/img/flutter.png" title="Flutter" style="height: 40px;"/>
+							</div>
+							<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:200px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped bg-success" style="width: 60%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-2">
+							  <img src="assets/img/visual-studio.png" title="Visual Studio" style="height: 40px;"/>
+							  &nbsp
+							  <img src="assets/img/visual-studio-code.png" title="Visual Studio Code" style="height: 40px;"/>
+							</div>
+							<!--<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:100px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped" style="width: 80%"></div>
+									</div>
+								</div>
+							</div>-->
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-2">
+								<img src="assets/img/mysql.png" title="MySQL" style="height: 40px;"/>
+								&nbsp
+								<img src="assets/img/postgre.png" title="PostgreSQL" style="height: 40px;"/>
+							</div>
+							<!--<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:100px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped" style="width: 40%"></div>
+									</div>
+								</div>
+							</div>-->
+						</div>
+						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+								<img src="assets/img/mongo.png" title="MongoDB" style="height: 40px;"/>
+							</div>
+							<!--<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:100px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped" style="width: 40%"></div>
+									</div>
+								</div>
+							</div>-->
+						</div>
+						<div class="row row-cols-auto" style="margin-bottom: 10px">
+							<div class="col">
+								JSON &nbsp &nbsp
+								XML &nbsp &nbsp
+								UML &nbsp &nbsp
+								SQL
+							</div>
+						</div>
+					</div>
+					
                     <div class="subheading mb-3">Certifications</div>
                     <ul class="fa-ul">
                         <li>
