--- a/index.html
+++ b/index.html
@@ -214,6 +214,18 @@
 							</div>
 						</div>
 						<div class="row" style="margin-bottom: 10px">
+							<div class="col-1">
+							  <img src="assets/img/bootstrap.png" title="Bootstrap" style="height: 40px;"/>
+							</div>
+							<div class="col" style=" position: relative;">
+								<div style=" position: absolute; top: 50%; transform: translateY(-50%); width:200px">
+									<div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+										<div class="progress-bar progress-bar-striped bg-warning" style="width: 40%"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row" style="margin-bottom: 10px">
 							<div class="col-2">
 							  <img src="assets/img/visual-studio.png" title="Visual Studio" style="height: 40px;"/>
 							  &nbsp
